test/tests/stages/18_structures/invalid_types/tag_resolution/shadowed_tag_branch_mismatch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[52]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(struct1)
  =
  {
  const int(1)
  }
  ;
  {
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(struct2)
  =
  {
  const int(2)
  }
  ;
  (
  void
  )
  (
  const int(1)
  ?
  identifier(struct1)
  :
  identifier(struct2)
  )
  ;
  }
  }
